bpy.ops.armature.calculate_roll wrong type enum #39768

Closed
opened 2014-04-17 04:44:57 +02:00 by Harrison Yu · 6 comments

System Information
windows 7 64bit gtx580

Blender Version
Broken: 8a42100
Worked: (optional)

Short description of error

when calling from python api,bpy.ops.armature.calculate with X,Z take no effect because it default to local tangent not global.

Exact steps for others to reproduce the error
try to call in console:
bpy.ops.armature.calculate_roll(type='GLOBAL_X', axis_flip=False, axis_only=False)

it will show:

Traceback (most recent call last):

File "<blender_console>", line 1, in <module>
File "D:\_Blender\_MyW64\2.70\scripts\modules\bpy\ops.py", line 188, in __call__
  ret = op_call(self.idname_py(), None, kw)

TypeError: Converting py args to operator properties: enum "GLOBAL_X" not found in ('X', 'Z', 'X', 'Y', 'Z', 'ACTIVE', 'VIEW', 'CURSOR')

which is obviously wrong in enum list.

**System Information** windows 7 64bit gtx580 **Blender Version** Broken: 8a42100 Worked: (optional) **Short description of error** when calling from python api,bpy.ops.armature.calculate with X,Z take no effect because it default to local tangent not global. **Exact steps for others to reproduce the error** try to call in console: bpy.ops.armature.calculate_roll(type='GLOBAL_X', axis_flip=False, axis_only=False) it will show: Traceback (most recent call last): ``` File "<blender_console>", line 1, in <module> File "D:\_Blender\_MyW64\2.70\scripts\modules\bpy\ops.py", line 188, in __call__ ret = op_call(self.idname_py(), None, kw) ``` TypeError: Converting py args to operator properties: enum "GLOBAL_X" not found in ('X', 'Z', 'X', 'Y', 'Z', 'ACTIVE', 'VIEW', 'CURSOR') which is obviously wrong in enum list.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YonghaiYu

Added subscriber: @YonghaiYu

This issue was referenced by blender/blender-addons-contrib@64f3774d62

This issue was referenced by blender/blender-addons-contrib@64f3774d6272d3071ed4d0bf90be2a6ca5a2e854

This issue was referenced by 64f3774d62

This issue was referenced by 64f3774d6272d3071ed4d0bf90be2a6ca5a2e854
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 64f3774d62.

Closed by commit 64f3774d62.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39768
No description provided.